enterprise/docs/modules/ROOT/pages/Eclipse MicroProfile Certification/5.37.0/Server Web TCK Results.adoc
[[tck-results]]
= TCK Results

As required by the https://www.eclipse.org/legal/tck.php[Eclipse Foundation Technology Compatibility Kit License], following is a summary of the TCK results for releases of MicroProfile 4.1.

**Payara Server 5.37.0 Web Profile Certification Summary**

- Product Name, Version and download URL (if applicable):
+
[cols="1,2",grid=none,frame=none]
|===
|image:JakartaEE_Logo_compatible-color.png[]
|
{empty} +
{empty} +
https://www.payara.fish/page/payara-enterprise-downloads/[Payara Server 5.37.0 (Web Profile)]
|===

- Specification Names, Versions and download URLs:
+
https://download.eclipse.org/microprofile/microprofile-config-2.0/microprofile-config-spec-2.0.html/[MicroProfile Config 2.0]
https://download.eclipse.org/microprofile/microprofile-fault-tolerance-2.0/microprofile-fault-tolerance-spec-2.0.html/[MicroProfile Fault Tolerace 2.0]
https://download.eclipse.org/microprofile/microprofile-jwt-auth-1.2/microprofile-jwt-auth-spec-1.2.html/[MicroProfile JWT Auth 1.2]
https://download.eclipse.org/microprofile/microprofile-metrics-3.0/microprofile-metrics-spec-3.0.html/[MicroProfile Metrics 3.0]
https://download.eclipse.org/microprofile/microprofile-open-api-2.0/microprofile-open-api-spec-2.0.html/[MicroProfile Open API 2.0]
https://download.eclipse.org/microprofile/microprofile-open-tracing-2.0/microprofile-open-tracing-spec-2.0.html/[MicroProfile Open Tracing 2.0]
https://download.eclipse.org/microprofile/microprofile-rest-client-2.0/microprofile-rest-client-spec-2.0.html/[MicroProfile Rest Client 2.0]
https://download.eclipse.org/microprofile/microprofile-health-3.1/microprofile-health-spec-3.1.html/[MicroProfile Health 3.1]

- Public URL of TCK Results Summary:
+
https://docs.payara.fish/enterprise/docs/5.37.0/microprofile-certification/5.37.0/microprofile-4.1-tck-results-web-5.37.0.html


- Java runtime used to run the implementation:
+
`Zulu JDK Runtime Environment (version 8.0.252)
- Summary of the information for the certification environment:
+
Jenkins AWS EC2 Linux Cloud, Ubuntu 20.04 LTS +

== Test results

### Config 2.0
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 367, Failures: 0, Errors: 0, Skipped: 0
```

### Fault Tolerance 2.0
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 444, Failures: 0, Errors: 0, Skipped: 0
```

### Health 3.1
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 28, Failures: 0, Errors: 0, Skipped: 0
```

### JWT Auth 1.2
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 190, Failures: 0, Errors: 0, Skipped: 0
```

### Metrics 3.0
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 213, Failures: 0, Errors: 0, Skipped: 0
```

### Open API 2.0
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 242, Failures: 0, Errors: 0, Skipped: 0
```

### Open Tracing 2.0
```
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 66, Failures: 0, Errors: 0, Skipped: 0
```

### Rest Client 2.0
```
    * Default Package
    [INFO] Results:
    [INFO]
    [WARNING] Tests run: 220, Failures: 0, Errors: 0, Skipped: 12

    * Apache HTTP Client
    [INFO] Results:
    [INFO]
    [INFO] Tests run: 5, Failures: 0, Errors: 0, Skipped: 0
```